--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,10 @@
+
+<% if !params[:author].blank? %>
+  <% @posts = Post.where(author: params[:author]) %>
+<% end %>
+
 <h1>Believe It Or Not I'm Blogging On Air</h1>
+
 <div>
 <h3>Filter posts:</h3>
 <%= form_tag("/posts", method: "get") do %>
